objects/Contract.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActiveContractVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the version identifier of the active contract document of this contract</description>
        <label>Active Contract Document</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>vlocity_cmt__Application__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoRenewObjectCreation__c</fullName>
        <description>The object that is created as part of a renewal initiation. Object could be Opportunity, Quote or Order</description>
        <label>Renewal Notification Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Group</label>
        <referenceTo>vlocity_cmt__ContractGroup__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractReferenceNumber__c</fullName>
        <description>A field that can be used to store a user entered or externally referenced contract number</description>
        <label>Contract Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractType__c</fullName>
        <description>The contract type this contract belongs to.</description>
        <label>Contract Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountofContractVersion__c</fullName>
        <description>The number of document versions that have been created for this contract</description>
        <label>Count of Contract Document</label>
        <summaryForeignKey>vlocity_cmt__ContractVersion__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationReason__c</fullName>
        <description>Reason why they contract expired</description>
        <label>Expiration Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not want to renew</fullName>
                </value>
                <value>
                    <fullName>Moving to M2M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpiredContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the expired contract which this contact now replaces. This contract is considered an replacement of the expired contract</description>
        <label>Expired Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Replacement Contract</relationshipLabel>
        <relationshipName>ReplacementContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveDocumentLocked__c</fullName>
        <description>Indicates whether the active version of the contract document of this contract is locked</description>
        <formula>vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__IsDocumentLocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active Document Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveVersionBatchTemplate__c</fullName>
        <formula>vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__IsTemplateBatchable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActiveVersionBatchTemplate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsAutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this contract will be renewed automatically.</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsFrameContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this contract is a frame contract or a pricing agreement</description>
        <label>Is Frame Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNonStandard__c</fullName>
        <description>If checked, specifies that this contract is a non-standard contract. A non-standard contract is one that deviates from its contract template</description>
        <formula>if( vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__CountOfNonStandardSection__c &gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignEnvelopeId__c</fullName>
        <label>Last DocuSign Envelope Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignEnvelopeStatus__c</fullName>
        <label>Last DocuSign Envelope Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignJobId__c</fullName>
        <label>Last DocuSign Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobError__c</fullName>
        <label>Document Batch Job Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobId__c</fullName>
        <label>Document Batch Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobStatus__c</fullName>
        <label>Document Batch Job Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LocaleCode__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>Total: One Time Charges</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity from which this contract was created</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order from which this contract was created</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginalContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the original contract from which this contact was created. This contract is considered an amendment of the original contract</description>
        <label>Original Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies parent contract of this contract. This contract is considered a sub-contract of the parent contract</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sub Contract</relationshipLabel>
        <relationshipName>ParentContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price list used by contracts</description>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote from which this contract was created</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Total: Monthly Charges</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalNotificationTerm__c</fullName>
        <description>The unit of measure for renewal notification period (days or months)</description>
        <label>Renewal Notification Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                    <default>true</default>
                    <label>Months</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalNotification__c</fullName>
        <description>The time interval before contract expiration when a renewal notification is initiated</description>
        <label>Renewal Notification Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalStartDate__c</fullName>
        <description>Date on which a renewal notification is created, along with the specified renewal notification object. Calculated based on the contract end date, and the renewal notification term and renewal notification period values</description>
        <label>Renewal Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SendRenewalNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that a renewal notification message would be sent on the renewal notification date.</description>
        <label>Send Renewal Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SumOfNonStandardSection__c</fullName>
        <description>DEPRECATED.</description>
        <label>Sum of Non Standard Document</label>
        <summarizedField>vlocity_cmt__ContractVersion__c.vlocity_cmt__CountOfNonStandardSection__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_cmt__ContractVersion__c.vlocity_cmt__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__ContractVersion__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TerminateDate__c</fullName>
        <description>Date this contract was terminated</description>
        <label>Terminate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TerminationReason__c</fullName>
        <description>The reason this contract was terminated</description>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Not Compliance</fullName>
                </value>
                <value>
                    <fullName>Termination without Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TerminationType__c</fullName>
        <description>The type of contract termination</description>
        <label>Termination Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Cause</fullName>
                </value>
                <value>
                    <fullName>Without Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalMonthlyDiscount__c</fullName>
        <label>Total: Monthly Discount</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__RecurringDiscountPrice__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalOneTimeDiscount__c</fullName>
        <label>Total: One Time Discount</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__OneTimeDiscountPrice__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>ContractLifecycleManagement</fullName>
        <active>true</active>
        <label>Contract Lifecycle Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ReadOnlyContract</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>